[Change] Updated Dependencies + Fix `WinRegistry` support on JVM 11+
- Use Lenni Reflect to reflect without needing add-opens
- Also updated plugins, and recall Java 7 Support